--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,8 @@
-/* @media only screen and  (min-width: 1024px) and (max-width: 1920px) { */
+@media only screen and (min-width: 1024px) and (max-width: 2120px) {
 
 body{
 	margin: 0;
 	padding: 0;
-	/* z-index: 999999; */
-	/*background: linear-gradient(to top right, lightblue, #fff);*/
 }
 .bg-body{
 	width: 100%;
@@ -17,21 +15,19 @@ body{
 .carregando{
 	width: 100%;
 	height: 100%;
-	position: fixed;
-	background-color: rgba(255,255,255, 0.8);
-	z-index: 99999999999999;
-	display: none;
-
-}
-.carregando img{
 	position: absolute;
-	width: 250px;
-	height: 250px;
-	left: 50%;
-	margin-left: -125px;
+	background-color: rgba(0,0,0, 0.8);
+	z-index: 999999;
+	display: none;
+	
+}
+.carregando h2{
+	color: #fff;
+	text-align: center;
+	height: 40px;
 	top: 50%;
-	margin-top: -125px;
-
+	position: relative;
+	margin-top: -20px;
 }
 .icon-bar{
 	background-color: #fff;
@@ -39,10 +35,9 @@ body{
 .header{
 	background: #fff;
 	position: relative;
-	/* width: 100%; */
-	z-index: 997; 
+	z-index: -9; 
+	height: 50px;
 	/* box-shadow: 0px 1px 5px #777; */
-	height: 50px; 
 }
 .header a{
 	color: #397ab7;
@@ -53,21 +48,18 @@ body{
 	margin-right: 100px;
 }
 .bg-menu{
-	z-index: 995;
+	z-index: 1;
 	margin-top: 0px;
 	position: fixed;
-	/* margin-left: -30px; */
 	background-color: #f9f9f9 ;
 	height: 100%;
-	/* box-shadow: 1px 0px 8px #d8d8d8; */
+	box-shadow: 1px 0px 14px #333;
+	/* margin-left: -30px; */
 }
-
 .menu{
 	margin-top: 40px;
 	border-radius: 5px;
 	height: 663px;
-
-
 }
 .menu ul li a{
 	color: #3a3a3a;
@@ -76,8 +68,8 @@ body{
 	/* border-bottom: 1px solid #ccc; */
 }
 .menu ul li a:hover{
-	/* background-color: transparent; */
 	color: #000;
+	/* background-color: transparent; */
 	/* text-shadow: 0px 1px 1px black; */
 }
 .dropdown li {
@@ -87,12 +79,10 @@ body{
 	margin-left: -10px;
 }
 .dropdown li a{
-
 	padding: 10px ;
 	border-radius: 5px;
-	/* background-color: #fff; */
 	text-decoration: none;
-
+	/* background-color: #fff; */
 }
 .dropdown li a:hover{
 	background-color: #eee;
@@ -100,10 +90,9 @@ body{
 .direitos{
 	z-index: 998;
 	position: fixed;
-	/* margin-top: 600px; */
 	bottom: 0px;
-
 	margin-left: -15px;
+	/* margin-top: 600px; */
 }
 .direitos p{
 	color: #05a;
@@ -111,28 +100,20 @@ body{
 	font-size: 13px;
 }
 .bg-principal{
-	display: none;
 	z-index: 9999999;
-<<<<<<< HEAD
 	position: absolute;
-	margin-top: 10px;
+	display: none;
+	top: 50%;
+	margin-top: -321px;
 	width: 1024px;
-=======
-	position: relative;
-	margin-top: 10px;
-	width: 1000px;
->>>>>>> 8ea6609d8cb6c77e3128e4913bf519481d304e53
-	min-height: 642px;
+	height: auto;
 	background-color: #fff;
-	box-shadow: 0px 3px 14px black;
+	box-shadow: 0px 3px 17px black;
 	border-radius: 5px;
 	left: 50%;
-<<<<<<< HEAD
 	margin-left: -512px;
-=======
-	margin-left: -500px;
->>>>>>> 8ea6609d8cb6c77e3128e4913bf519481d304e53
 	padding: 0px;
+	padding-bottom: 50px;
 	
 }
 .bg-principal .header-relatorio{
@@ -140,9 +121,9 @@ body{
     background-color: #397ab7;
 	border-radius: 5px 5px 0 0;
 	color: #fff;
-	/* position: fixed; */
 	width: 100%;
 	z-index: 999999;
+	/* position: fixed; */
 }
 .bg-principal h4{
 	text-align: center
@@ -195,28 +176,18 @@ hr{
 /* Relatório */
 #relatorio{
 	display: none;
-	z-index: 9999999;
+	z-index: 999999999;
 	position: relative;
-<<<<<<< HEAD
 	margin-top: 0px;
 	width: 900px;
-=======
-	margin-top: 10px;
-	width: 1000px;
->>>>>>> 8ea6609d8cb6c77e3128e4913bf519481d304e53
 	height: 97%;
 	background-color: #fff;
 	box-shadow: 0px 3px 14px black;
 	border-radius: 5px;
 	left: 50%;
-<<<<<<< HEAD
 	margin-left: -450px;
 	padding: 0px;
 	border: 1px solid #eee;
-=======
-	margin-left: -500px;
-	padding: 0px;
->>>>>>> 8ea6609d8cb6c77e3128e4913bf519481d304e53
 	
 }
 #relatorio .header-relatorio{
@@ -230,7 +201,7 @@ hr{
 }
 .fechar{	
     
-	margin-top:-80px;
+	margin-top:-90px;
 	padding: 0px 5px;
 	font-weight: bold;
     background-color: transparent;
@@ -239,26 +210,33 @@ hr{
 }
 #relatorio .tabela-cadastro, th, td{
 	margin-top: 130px;
-<<<<<<< HEAD
 	font-size: 12px;
 	padding: 0;
 }
 #relatorio .footer{
     background-color: #397ab7;
-=======
-	font-size: 14px;
-	padding: 0px;
-	text-transform: capitalize;
-}
-#relatorio .footer{
-    background-color: #000;
->>>>>>> 8ea6609d8cb6c77e3128e4913bf519481d304e53
     width: 100%;
     color: #fff;
     position: relative;
     bottom: 0px;
     padding: 10px;
 }
+.modal-confirmacao{
+    position: fixed;
+    width: 500px;
+    height: 80px;
+    background-color: rgba(20, 153, 60, 0.9);
+    box-shadow: 0px 1px 5px black;
+    border-left: 10px solid green;
+    left: 50%;
+    margin-top: 10px;
+	margin-left: -250px;
+	z-index: 999999999999;
+	display: none;
+}
+.modal-confirmacao h3{
+    text-align: center;
+    color: #fff;
+}
 
-
-/* } */
+}
